--- a/asiance-web.html
+++ b/asiance-web.html
@@ -22,6 +22,9 @@
         </a>
     </div>
     <main class="con">
+        <button onclick="goToTop()" type="button" class="gototop">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 24V0h24v24z"/></mask><g mask="url(#a)"><path fill="#333" d="m18 17-1.4 1.4-4.6-4.6-4.6 4.6L6 17l6-6 6 6Zm0-9H6V6h12v2Z"/></g></svg>
+        </button>
         <div class="top-visual">
             <div class="link-area">
                 <a href="https://www.asiance.com/en/" target="_blank" class="out-link">
@@ -117,5 +120,6 @@
     <script src="js/loading.js"></script>
     <script src="js/header.js"></script>
     <script src="js/section.js"></script>
+    <script src="js/gototop.js"></script>
 </body>
 </html>
