--- a/lacoste.html
+++ b/lacoste.html
@@ -22,6 +22,9 @@
         </a>
     </div>
     <main class="con">
+        <button onclick="goToTop()" type="button" class="gototop">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 24V0h24v24z"/></mask><g mask="url(#a)"><path fill="#333" d="m18 17-1.4 1.4-4.6-4.6-4.6 4.6L6 17l6-6 6 6Zm0-9H6V6h12v2Z"/></g></svg>
+        </button>
         <div class="top-visual">
             <div class="link-area">
                 <a href="https://www.lacoste.com/kr/?utm_source=google&utm_medium=cpc&utm_campaign=main&utm_content=00_%EB%B8%8C%EB%9E%9C%EB%93%9C&utm_term=%EB%9D%BC%EC%BD%94%EC%8A%A4%ED%85%8C%EC%BD%94%EB%A6%AC%EC%95%84&gclid=Cj0KCQjw0bunBhD9ARIsAAZl0E0r9WktrfES0w7i1AR3wryeagkjOelE3IUgaTfcjt8feMqeNMgR31oaAoKhEALw_wcB" target="_blank" class="out-link">
@@ -111,5 +114,6 @@
     <script src="js/loading.js"></script>
     <script src="js/header.js"></script>
     <script src="js/section.js"></script>
+    <script src="js/gototop.js"></script>
 </body>
 </html>
