--- a/asiance-web.html
+++ b/asiance-web.html
@@ -121,5 +121,13 @@
     <script src="js/header.js"></script>
     <script src="js/section.js"></script>
     <script src="js/gototop.js"></script>
+    <script>
+        function goToTop() {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        }
+    </script>
 </body>
 </html>
