--- a/main.html
+++ b/main.html
@@ -95,7 +95,7 @@
                         </a>
                     </li>
                     <li class="thum-item">
-                        <a href="#" class="thum-con">
+                        <a href="designsystem.html" class="thum-con">
                             <div class="thum-img">
                                 <img src="img/thum_0.png"/>
                                 <div class="thum-text into-img">
