--- a/channel-app.html
+++ b/channel-app.html
@@ -83,7 +83,7 @@
             <img src="img/channel_2.png"/>
         </div>
         <div class="more-projects">
-            <a href="#" class="other-project next">
+            <a href="designsystem.html" class="other-project next">
                 <div class="text-direction">
                     <svg class="next-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m9 19-7-7 7-7 1.425 1.4-4.6 4.6H22v2H5.825l4.575 4.6L9 19Z"/></g></svg>
                     <h5 class="next-text">Next up</h5>
