--- a/designsystem.html
+++ b/designsystem.html
@@ -125,7 +125,7 @@
             </div>
         </div>
         <div class="content-wrap gray">
-            <div class="content-inner">
+            <div class="content-inner same-con">
                 <h3>(2) 비효율적인 작업의 지속적인 발생</h3>
                 <p>사이트 마다 새로운 IoT 디자인을 제작하면서 같은 기능임에도 다시 디자인 해야만 했고 그로 인해 비효율적인 작업이
                     발생할 수 밖에 없었습니다. 버튼 스타일이 바뀌거거나 새로운 텍스트 인풋 창이 추가되는 경우에는 일일이 스타일을
@@ -136,7 +136,7 @@
             </div>
         </div>
         <div class="content-wrap gray" style="padding-bottom: 92px;">
-            <div class="content-inner">
+            <div class="content-inner same-con">
                 <h3>(3) 디자인 확장성 부족</h3>
                 <p>디자인 컴포넌트 끼리 연결되지 않아 요소를 확장하거나 고도화 하는 데 어려움이 있었습니다.
                     이전의 디자인을 재활용하여 촉박한 마감일을 좇다 보니 사용성을 위해 디자인 개선과 문제 해결을 위해 고민할 수 있는
@@ -170,7 +170,7 @@
             </div>
         </div>
         <div class="content-wrap gray">
-            <div class="content-inner">
+            <div class="content-inner same-con">
                 <h3>(2) 공동의 디자인 자산 확충</h3>
                 <p>UI 디자인 공동의 자산을 쌓았고 실제 업무에 사용하며 내용을 보충하고 보완하고 있습니다.
                     디자인 톤앤매너 유지를 위해 별도의 미팅을 진행하지 않아도 모두 ‘어떤 컴포넌트를 어디에 사용하면 되는지’ 알고 있고
@@ -181,7 +181,7 @@
             </div>
         </div>
         <div class="content-wrap gray" style="padding-bottom: 92px;">
-            <div class="content-inner">
+            <div class="content-inner same-con">
                 <h3>(3) 커뮤니케이션 기준 마련</h3>
                 <p>협업 팀 마다 문화적 차이, 업무의 차이, 시야의 차이로 인해 커뮤니케이션이 어려울 수 있고 그로 인해 생기는
                     미스커뮤니케이션은 업무 작업 소요 시간을 늘릴 수 있습니다. 디자인시스템의 ‘토큰’ 개념을 통해 컴포넌트 마다
@@ -204,7 +204,7 @@
             </div>
         </div>
         <div class="content-wrap">
-            <div class="content-inner">
+            <div class="content-inner same-con">
                 <h3>(2) 웹과 앱에 동일한 환경 제공</h3>
                 <p>웹과 앱 디바이스 사이의 디자인 간극을 없앨 수 있습니다.
                     웹에 사용한 컴포넌트와 동일하게 앱을 제작하거나 칼럼 시스템(참고자료)을 활용하여 반응형 플랫폼 제작을 드는
