--- a/gsk.html
+++ b/gsk.html
@@ -116,7 +116,7 @@
                     <h5 class="pre-text">Previos</h5>
                     <svg class="pre-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m15 19-1.4-1.4 4.6-4.6H2v-2h16.2l-4.6-4.6L15 5l7 7-7 7Z"/></g></svg>
                 </div>
-                <h4 class="pre-project-name">영국문화원 예약 사이트</h4>
+                <h4 class="pre-project-name">어학원 예약 사이트</h4>
             </a>
         </div>
     </div>
