--- a/main.html
+++ b/main.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="css/common.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,500,0,0" />
     <title>Myenghee Jeon</title>
 </head>
 <body class="before_load">
@@ -74,6 +76,16 @@
                 <div class="sticker obj5">
                     <h2>Designer</h2>
                 </div>
+                <div class="obj6">
+                    <span class="arrow-next material-symbols-outlined">
+                        east
+                        </span>
+                </div>
+                <div class="obj7">
+                    <span class="arrow-next material-symbols-outlined">
+                        east
+                        </span>
+                </div>
             </div>
         </div>
         <div class="thum-container">
@@ -124,6 +136,8 @@
                             </div>
                         </a>
                     </li>
+                </ul>
+                <ul class="rows">
                     <li class="thum-item">
                         <a href="asiance-web.html" class="thum-con">
                             <div class="thum-img">
@@ -139,8 +153,6 @@
                             </div>
                         </a>
                     </li>
-                </ul>
-                <ul class="rows">
                     <li class="thum-item">
                         <a href="woolmark.html" class="thum-con">
                             <div class="thum-img">
@@ -171,6 +183,8 @@
                             </div>
                         </a>
                     </li>
+                </ul>
+                <ul class="rows">
                     <li class="thum-item">
                         <a href="gsk.html" class="thum-con">
                             <div class="thum-img">
@@ -201,8 +215,6 @@
                             </div>
                         </a>
                     </li>
-                </ul>
-                <ul class="rows">
                     <li class="thum-item">
                         <a href="lacoste.html" class="thum-con">
                             <div class="thum-img">
@@ -218,6 +230,8 @@
                             </div>
                         </a>
                     </li>
+                </ul>
+                <ul class="rows">
                     <li class="thum-item">
                         <a href="lg.html" class="thum-con">
                             <div class="thum-img">
