--- a/main.html
+++ b/main.html
@@ -92,16 +92,16 @@
             <div class="thum-area">
                 <ul class="rows">
                     <li class="thum-item">
-                        <a href="#" class="thum-con">
+                        <a href="athena.html" class="thum-con">
                             <div class="thum-img">
                                 <img src="img/thum_0-1.png"/>
                                 <div class="thum-text into-img">
-                                    <h4>Athena2 (VMS 모니터링 관제 플랫폼)</h4>
+                                    <h4>Athena (지능형 영상 관제 솔루션)</h4>
                                     <span>Danusys</span>
                                 </div>
                             </div>
                             <div class="thum-text">
-                                <h4>Athena2 (VMS 모니터링 관제 플랫폼)</h4>
+                                <h4>Athena (지능형 영상 관제 솔루션)</h4>
                                 <span>Danusys</span>
                             </div>
                         </a>
