--- a/designsystem.html
+++ b/designsystem.html
@@ -215,12 +215,12 @@
             </div>
         </div>
         <div class="more-projects">
-            <a href="#" class="other-project next">
+            <a href="athena.html" class="other-project next">
                 <div class="text-direction">
                     <svg class="next-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m9 19-7-7 7-7 1.425 1.4-4.6 4.6H22v2H5.825l4.575 4.6L9 19Z"/></g></svg>
                     <h5 class="next-text">Next up</h5>
                 </div>
-                <h4 class="next-project-name">Athena2</h4>
+                <h4 class="next-project-name">Athena-영상 관제 솔루션</h4>
             </a>
             <a href="channel-app.html" class="other-project prev">
                 <div class="text-direction">
