--- a/main.html
+++ b/main.html
@@ -62,13 +62,13 @@
             </ul>
             <div class="kv-sticker">
                 <div class="sticker obj1">
-                    <h2>ISFJ</h2>
+                    <h2>Product</h2>
                 </div>
                 <div class="sticker obj2">
                     <h2>MYEONGHEE</h2>
                 </div>
                 <div class="sticker obj3">
-                    <h2>LIBRA</h2>
+                    <h2>brands</h2>
                 </div>
                 <div class="sticker obj4">
                     <h2>UX/UI</h2>
