--- a/athena.html
+++ b/athena.html
@@ -46,11 +46,11 @@
                 </dl>
                 <dl>
                     <dt>Role</dt>
-                    <dd>Product Manager</dd>
+                    <dd>Product Designer</dd>
                 </dl>
                 <dl>
                     <dt>Team</dt>
-                    <dd>1 PM / 3 Developer</dd>
+                    <dd>1 Designer / 3 Developer</dd>
                 </dl>
                 <dl>
                     <dt>Scope</dt>
