--- a/designsystem.html
+++ b/designsystem.html
@@ -72,7 +72,7 @@
                 </dl>
                 <dl>
                     <dt>Role</dt>
-                    <dd>PM (기획, 디자인, 프론트엔드)</dd>
+                    <dd>Product designer</dd>
                 </dl>
                 <dl>
                     <dt>Scope</dt>
