--- a/main.html
+++ b/main.html
@@ -77,11 +77,13 @@
                     <h2>Designer</h2>
                 </div>
                 <div class="obj6">
+                    <img src="img/text_rotate_01.png"/>
                     <span class="arrow-next material-symbols-outlined">
                         east
                         </span>
                 </div>
                 <div class="obj7">
+                    <img src="img/text_rotate_02.png"/>
                     <span class="arrow-next material-symbols-outlined">
                         east
                         </span>
