--- a/athena.html
+++ b/athena.html
@@ -54,7 +54,7 @@
                 </dl>
                 <dl>
                     <dt>Scope</dt>
-                    <dd>소프트웨어</dd>
+                    <dd>소프트웨어 고도화</dd>
                 </dl>
                 <dl>
                     <dt>Tools</dt>
@@ -75,10 +75,10 @@
         <div class="sec-detail">
             <h4>Overview</h4>
             <p>
-                기존의 아테나는 2017년에 개발한 'Video monitoring solution'이었습니다. </br>
-                시간이 흐르고 업계의 기술력이 발달하며 아테나 또한 단순한 VMS 영역에서 벗어나 '스마트시티'를 위한 기술력을 갖추기 위해 리뉴얼이 필요하였습니다.
+                기존의 아테나는 2011년에 개발한 'Video monitoring solution'이었습니다. </br>
+                시간이 흐르고 업계의 기술력이 발달하며 아테나 또한 단순한 VMS 영역에서 벗어나 '스마트시티'를 위한 기술력을 갖추기 위해 제품 고도화가 필요하였습니다.
                 </br>
-                인공지능을 기술을 활용하여 제품 리뉴얼을 하고자 하였고 새로운 아테나의 UX 설계와 GUI 디자인을 맡아 Product Manager 역할을 수행하였습니다. </br>
+                인공지능을 기술을 활용하여 제품 고도화를 하고자 하였고 새로운 아테나의 고도화 작업에서 프로덕트 디자이너 역할을 맡아 수행하였습니다. </br>
                 기능면에서는 CCTV 운영환경에 최적화된 지능형 영상 관제 솔루션으로 설계하였고 사용자 친화적인 유저인터페이스를 도입하여 사용자의 사용성을 개선하였습니다.</br>
                 </p>
         </div>
@@ -86,6 +86,60 @@
             <img src="img/vms_img_1.png"/>
         </div>
         <div class="content-wrap">
+            <nav class="table-contents">
+                <div class="contents-container">
+                    <a href="#first" class="contents-area">
+                        <span>문제점 정의</span>
+                    </a>
+                    <a href="#four" class="contents-area">
+                        <span>솔루션 도출</span>
+                    </a>
+                </div>
+            </nav>
+            <div id="first" class="content-wrap">
+                <div class="content-inner">
+                    <h2>문제점 정의</h2>
+                    <h3>(1) 사용자 기준으로 분석</h3>
+                    <p>구글 설문지 폼을 작성 후 모니터링 요원들에게 전달하여 주요 업무와 업무의 우선 순위, VOC를 파악하였습니다.
+                        아테나는 이미 기존 사용자가 있는 상태였기 때문에 사용자 기준에서 사용성을 개선하는 편이 좋을 것이라고
+                        판단하였습니다. 업무를 도와주는 업무 툴로써 적절히 기능할 수 있는 제품으로 고도화하는 것이 목표였습니다.</p>
+                </div>
+                <div class="content-img">
+                    <img src="img/athena_01.png"/>
+                </div>
+            </div>
+            <div id="second" class="content-wrap">
+                <div class="content-inner">
+                    <h3>(2) 핵심 VOC 분석</h3>
+                    <p>먼저 구글 설문지를 통해 얻은 VOC 리스트 수립하였습니다. 사용자 그룹 별(그룹 A~C)로 VOC 내용을 나누었고
+                        실제 근무 중인 모니터링 요원 8명과 각 지자체 별 주무관 12명을 대상으로 FGI를 진행하였습니다.
+                        인터뷰에서 나온 유의미한 결과와 기존의 VOC 리스트 항목을 비교 대조하여 가장 많이 중첩되는 내용을 추렸고
+                        각각의 사용자 그룹 별 핵심 VOC 리스트를 정립하였습니다. </p>
+                </div>
+                <div class="content-img">
+                    <img src="img/athena_02.png"/>
+                </div>
+            </div>
+            <div id="third" class="content-wrap" style="padding-bottom: 92px;">
+                <div class="content-inner">
+                    <h3>(3) 사용성 테스트</h3>
+                    <p>아테나 제품을 처음 접하는 사내 직원 8명을 모집하여 사용성을 테스트하였습니다. 
+                        또한 사용자의 행동을 휴리스틱 가이드라인을 참고하여 평가하였습니다.</p>
+                </div>
+                <div class="content-img">
+                    <img src="img/athena_03.png"/>
+                </div>
+            </div>
+            <div id="four" class="content-wrap gray" style="padding-bottom: 92px;">
+                <div class="content-inner">
+                    <h2>솔루션 도출</h2>
+                    <p>인공 지능 기술을 도입하여 지능형 영상 관제 솔루션으로 제품 성능을 높이고 직관적인 GUI와 효율적인 UX를
+                        설계하여 사용자의 사용성을 향상시키고 오작동을 줄이고자 하였습니다.</p>
+                </div>
+                <div class="content-img">
+                    <img src="img/athena_04.png"/>
+                </div>
+            </div>
             <div class="content-inner">
                 <h2>사용자 편의성 개선</h2>
                 <h3>(1) 다양한 버전 제공</h3>
@@ -124,15 +178,15 @@
                 <img src="img/vms_img_6.png"/>
             </div>
             <div class="content-inner">
-                <h3>(2) 검출 개체를 통한 이벤트 추적 업무 제공</h3>
-                <p>이벤트 발생 시 개체를 검출하고 검출된 개체를 기준으로 인근 CCTV를 관제 화면에 노출합니다. 컬러를 활용하여 이벤트의 경중을 나타내며 'Danusys red'는 심각한 이벤트, 'Danusys yellow'는 알람 이상 등과 같은 가벼운 이벤트를 나타냅니다.</p>
+                <h3>(2) 검출 객체를 통한 이벤트 추적 업무 제공</h3>
+                <p>이벤트 발생 시 객체를 검출하고 검출된 객체를 기준으로 인근 CCTV를 관제 화면에 노출합니다. 컬러를 활용하여 이벤트의 경중을 나타내며 'Danusys red'는 심각한 이벤트, 'Danusys yellow'는 알람 이상 등과 같은 가벼운 이벤트를 나타냅니다.</p>
             </div>
             <div class="detail-img">
                 <img src="img/vms_img_7.png"/>
             </div>
             <div class="content-inner">
-                <h3>(3) 지능형 개체 검색 제공</h3>
-                <p>스마트 필터링을 통해 검출된 개체 정보를 손쉽게 검색할 수 있습니다. 인물과 차량 중 선택하여 검색 가능합니다.</p>
+                <h3>(3) 지능형 객체 검색 제공</h3>
+                <p>스마트 필터링을 통해 검출된 객체 정보를 손쉽게 검색할 수 있습니다. 인물과 차량 중 선택하여 검색 가능합니다.</p>
             </div>
             <div class="detail-img">
                 <img src="img/vms_img_8.png"/>
