--- a/designsystem.html
+++ b/designsystem.html
@@ -114,7 +114,7 @@
                 </a>
             </div>
         </nav>
-        <div id="first" class="content-wrap gray">
+        <div id="first" class="content-wrap gray" style="padding-bottom: 92px;">
             <div class="content-inner">
                 <h2>기존의 문제점</h2>
                 <h3>(1) 일관되지 않은 디자인</h3>
