--- a/athena.html
+++ b/athena.html
@@ -108,7 +108,7 @@
                     <img src="img/athena_01.png"/>
                 </div>
             </div>
-            <div id="second" class="content-wrap">
+            <div class="content-wrap">
                 <div class="content-inner">
                     <h3>(2) 핵심 VOC 분석</h3>
                     <p>먼저 구글 설문지를 통해 얻은 VOC 리스트 수립하였습니다. 사용자 그룹 별(그룹 A~C)로 VOC 내용을 나누었고
@@ -120,7 +120,7 @@
                     <img src="img/athena_02.png"/>
                 </div>
             </div>
-            <div id="third" class="content-wrap" style="padding-bottom: 92px;">
+            <div class="content-wrap" style="padding-bottom: 92px;">
                 <div class="content-inner">
                     <h3>(3) 사용성 테스트</h3>
                     <p>아테나 제품을 처음 접하는 사내 직원 8명을 모집하여 사용성을 테스트하였습니다. 
