--- a/athena.html
+++ b/athena.html
@@ -171,8 +171,9 @@
             </div>
             <div class="content-inner">
                 <h2>관제 업무에 최적화된 기능</h2>
-                <h3>(1) 카메라 태그를 통해 선별 관제 업무 제공</h3>
+                <h3>(1) 카메라 태그를 통해 선별 관제* 업무 제공</h3>
                 <p>모든 카메라에 다양한 태그를 부여할 수 있습니다. 사용자는 3~4개의 태그를 함께 검색하여 손쉽고 빠르게 선별 관제 모니터링 작업을 수행할 수 있습니다. 이를 통해 사용자는 이벤트 감시를 효율적이고 정확하게 진행할 수 있습니다.</p>
+                <p class="footnote" style="font-size: 12px;">*선별 관제 : 특정 움직임이 감지된 카메라를 자동으로 관제 영역에 노출하는 기능</p>
             </div>
             <div class="detail-img">
                 <img src="img/vms_img_6.png"/>
