--- a/designsystem.html
+++ b/designsystem.html
@@ -68,7 +68,7 @@
             <div class="summary">
                 <dl>
                     <dt>Year</dt>
-                    <dd>2022.11 - 2023.04</dd>
+                    <dd>2022.11 - 2023.06</dd>
                 </dl>
                 <dl>
                     <dt>Role</dt>
@@ -76,7 +76,7 @@
                 </dl>
                 <dl>
                     <dt>Scope</dt>
-                    <dd>가이드라인 작성, 반응형 웹 디자인, 프론트 웹 구축</dd>
+                    <dd>가이드라인 구축, 반응형 웹 디자인, 프론트 웹 구축</dd>
                 </dl>
                 <dl>
                     <dt>Tools</dt>
@@ -149,9 +149,9 @@
         <div id="second" class="content-wrap" style="margin-bottom: 92px;">
             <div class="content-inner">
                 <h2>작업 프로세스</h2>
-                <p>디자인의 최초 뼈대가 되는 색깔, 글자, 아이콘 등으로 구성되는 파운데이션을 선행하여 작업하였습니다.
+                <p>디자인의 최초 뼈대가 되는 색깔, 글자, 아이콘 등으로 구성되는 파운데이션을 선행하여 작업하였습니다. 파운데이션 작업에는 브랜드 아이덴티티를 잘 살리기 위해 노력하였습니다.
                 그 다음으로 파운데이션을 조합해서 구성되는 버튼, 뱃지, 드롭다운 등의 컴포넌트를 제작하고
-                마지막으로 컴포넌트를 조합해서 구성되는 테이블, 버튼 그룹 등의 패턴을 완성하였습니다.</p>
+                마지막으로 컴포넌트를 조합해서 구성되는 테이블, 버튼 그룹 등의 패턴을 완성하였습니다. 컴포넌트와 패턴은 기존의 플랫폼 디자인 산출물에서 많이 사용되고 보편적인 기능들을 위주로 리스트업을 한 후 우선순위를 선정하여 순차적으로 제작하였습니다.</p>
             </div>
             <div class="content-img">
                 <img src="img/design_4.png"/>
@@ -180,7 +180,7 @@
                 <img src="img/design_6.png"/>
             </div>
         </div>
-        <div class="content-wrap gray" style="padding-bottom: 92px;">
+        <div class="content-wrap gray">
             <div class="content-inner same-con">
                 <h3>(3) 커뮤니케이션 기준 마련</h3>
                 <p>협업 팀 마다 문화적 차이, 업무의 차이, 시야의 차이로 인해 커뮤니케이션이 어려울 수 있고 그로 인해 생기는
@@ -189,6 +189,15 @@
             </div>
             <div class="content-img">
                 <img src="img/design_7.png"/>
+            </div>
+        </div>
+        <div class="content-wrap gray" style="padding-bottom: 92px;">
+            <div class="content-inner same-con">
+                <h3>(4) 작업 인력 시간 단축</h3>
+                <p>이미 구축된 디자인 라이브러리를 활용하여 기획, 디자인, 개발에 소모되는 업무 시간을 평균 20% 가량 단축할 수 있었습니다. 기획에서 화면 설계안과 디자인 시안을 함께 작업할 수 있었으며 화면설계서의 스크립트 작성 부분의 기능 설명에 소모되는 업무 시간 또한 현저히 줄었습니다. 프론트엔드 업무 시간 또한 대폭 단축되었습니다.</p>
+            </div>
+            <div class="content-img">
+                <img src="img/design_10.png"/>
             </div>
         </div>
         <div id="four" class="content-wrap">
