--- a/designsystem.html
+++ b/designsystem.html
@@ -27,7 +27,7 @@
         </button>
         <div class="top-visual">
             <div class="link-area">
-                <a href="https://danusyslab.com/main.html" target="_blank" class="out-link">
+                <a href="https://danusyslab.github.io/danulab/main.html" target="_blank" class="out-link">
                     <span>Go to this site</span>
                     <svg class="next-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><mask id="a" width="24" height="24" x="0" y="0" maskUnits="userSpaceOnUse" style="mask-type:alpha"><path fill="#D9D9D9" d="M0 0h24v24H0z"/></mask><g mask="url(#a)"><path fill="#333" d="m15 19-1.4-1.4 4.6-4.6H2v-2h16.2l-4.6-4.6L15 5l7 7-7 7Z"/></g></svg>
                 </a>
